Actualizacion de la Base de Datos

--- a/CoopDEJC/appsettings.json
+++ b/CoopDEJC/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //Esta direcion varia dependiendo del equipo en que se ejecute
+    //Esta direcion varia dependiendo del equipo en que se ejecute (inserte la direccion del SQLserver)
     "CoopConnection": "Server=MSI\\SQLEXPRESS;Database=CoopDB;Trusted_Connection=True;TrustServerCertificate=true"
   }
 }
