--- a/CoopDEJC/CoopDEJC.csproj
+++ b/CoopDEJC/CoopDEJC.csproj
@@ -14,6 +14,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Views\Home\Index.cshtml" />
+    <None Include="Views\Home\MyProfile.cshtml" />
+    <None Include="Views\Home\Privacy.cshtml" />
+    <None Include="wwwroot\img\apps-line.svg" />
+    <None Include="wwwroot\img\Home-Index.svg" />
+    <None Include="wwwroot\img\Investment.svg" />
+    <None Include="wwwroot\img\Loans.svg" />
+    <None Include="wwwroot\img\user-line.svg" />
+    <None Include="wwwroot\js\site.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
