Add Investment and Loans CSS, fix Index list CSS

--- a/CoopDEJC/CoopDEJC.csproj
+++ b/CoopDEJC/CoopDEJC.csproj
@@ -13,4 +13,8 @@
     <None Remove="wwwroot\NewFolder1\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Home\Investment\" />
+  </ItemGroup>
+
 </Project>
